--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/hunterhawes13/WinterCarivalHunter#readme",
   "dependencies": {
+    "@horizon/client": "^1.1.3",
+    "aphrodite": "^0.5.0",
+    "elemental": "^0.6.0",
+    "fixed-data-table": "^0.6.3",
     "hjs-webpack": "^8.3.0",
     "lodash": "^4.14.1",
     "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1"
   },
